--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/cayman@v0.2.0
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: Pragnesh
 description: Senior Java Developer
 plugins:
