--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-remote_theme: pages-themes/cayman@v0.2.0
 theme: jekyll-theme-cayman
-title: Pragnesh
-description: Senior Java Developer
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Your Name
+description: Senior Java Developer Portfolio
